# Task_Transformer

./: .gitignore  README.md  Readme.md  pyproject.toml  task1.py
task_ml/: Polygon Transformer.ipynb  task.py
